# teste_bot_wpp

./: .env  .gitignore  Detalhes.md  README.md  __main.py  compose.yaml  deploy.sh  dockerfile  jobs.db  main copy.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  utils.py
.github/workflows/: docker-image.yml
app/: config.py  models.py  scheduler.py  services.py
app/models/: InstantMessageRequest.py  ScheduleMessageRequest.py
app/routes/: cancel_scheduled_message.py  check_user_status.py  current_token.py  expiration_time.py  list_scheduled_messages.py  list_templates.py  logs.py  manage_templates.py  messages.py  schedule_message.py  send_instant_message.py  send_message_template.py  send_template_message.py  update_token.py  webhook.py
app/services/: get_expiration_time.py  send_message_instant.py  send_message_scheduled.py  send_message_template.py  update_access_token.py
iac/: README.md  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
