[tool.poetry]
name = "teste-bot-wpp"
version = "0.1.0"
description = "Testar bot whats app"
authors = ["joao-pedro-rdo <joaoprdo2.aluno@unipampa.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
